--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QNR-Kp-Ooz" userLabel="ColorSelectStack">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="QNR-Kp-Ooz" userLabel="ColorSelectStack">
                                         <rect key="frame" x="15.666666666666657" y="45.333333333333314" width="344" height="68"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="Fiz-oa-Kg9">
@@ -78,7 +78,7 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rUy-Oz-SKR">
-                                                <rect key="frame" x="56" y="0.0" width="180" height="68"/>
+                                                <rect key="frame" x="55" y="0.0" width="180" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INPUT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XjW-Mg-WW6">
                                                         <rect key="frame" x="10" y="0.0" width="160" height="24"/>
@@ -108,19 +108,19 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="P3C-Sl-IXD">
-                                                <rect key="frame" x="256" y="0.0" width="88" height="68"/>
+                                                <rect key="frame" x="254" y="0.0" width="90" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TYPE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPI-Er-YyA">
-                                                        <rect key="frame" x="10" y="0.0" width="68" height="24"/>
+                                                        <rect key="frame" x="10" y="0.0" width="70" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uXU-tE-jQe">
-                                                        <rect key="frame" x="0.0" y="24.000000000000057" width="88" height="44"/>
+                                                        <rect key="frame" x="0.0" y="24.000000000000057" width="90" height="44"/>
                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="88" id="UVw-77-oMt"/>
+                                                            <constraint firstAttribute="width" constant="90" id="UVw-77-oMt"/>
                                                             <constraint firstAttribute="height" constant="44" id="kt0-6X-VGG"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
@@ -128,7 +128,7 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="88" id="G1T-Ax-XTz"/>
+                                                    <constraint firstAttribute="width" constant="90" id="G1T-Ax-XTz"/>
                                                     <constraint firstItem="rPI-Er-YyA" firstAttribute="leading" secondItem="P3C-Sl-IXD" secondAttribute="leading" constant="10" id="I5D-o4-ghz"/>
                                                 </constraints>
                                             </stackView>
@@ -151,22 +151,22 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="MMt-fs-ATl" userLabel="ColorConvertStack">
-                                        <rect key="frame" x="43.666666666666657" y="174.66666666666663" width="288" height="68"/>
+                                        <rect key="frame" x="42.666666666666657" y="174.66666666666663" width="290" height="68"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QTx-C0-DQu">
-                                                <rect key="frame" x="0.0" y="0.0" width="88" height="68"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="90" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TYPE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMK-VM-aqL">
-                                                        <rect key="frame" x="10" y="0.0" width="68" height="24"/>
+                                                        <rect key="frame" x="10" y="0.0" width="70" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xhi-wK-IbK">
-                                                        <rect key="frame" x="0.0" y="24" width="88" height="44"/>
+                                                        <rect key="frame" x="0.0" y="24" width="90" height="44"/>
                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="88" id="EB5-M0-Iza"/>
+                                                            <constraint firstAttribute="width" constant="90" id="EB5-M0-Iza"/>
                                                             <constraint firstAttribute="height" constant="44" id="a4y-Rr-8d1"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
@@ -174,12 +174,12 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="88" id="VfZ-WN-MBi"/>
+                                                    <constraint firstAttribute="width" constant="90" id="VfZ-WN-MBi"/>
                                                     <constraint firstItem="aMK-VM-aqL" firstAttribute="leading" secondItem="QTx-C0-DQu" secondAttribute="leading" constant="10" id="lZN-xX-XB2"/>
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hgl-Ii-gWP">
-                                                <rect key="frame" x="108" y="0.0" width="180" height="68"/>
+                                                <rect key="frame" x="110" y="0.0" width="180" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OUTPUT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xly-TF-dN4">
                                                         <rect key="frame" x="10" y="0.0" width="160" height="24"/>
@@ -315,8 +315,8 @@
                                     <constraint firstAttribute="width" constant="350" id="Wxr-He-9Yl"/>
                                 </constraints>
                             </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="singleLineEtched" rowHeight="49" estimatedRowHeight="-1" sectionHeaderHeight="10" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-in-hkG">
-                                <rect key="frame" x="0.0" y="121" width="375" height="200"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="singleLineEtched" rowHeight="49" estimatedRowHeight="-1" sectionHeaderHeight="10" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-in-hkG">
+                                <rect key="frame" x="0.0" y="193" width="375" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="NE4-g3-SvB"/>
@@ -363,15 +363,42 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KJB-J1-6jd">
+                                <rect key="frame" x="12.666666666666657" y="131" width="350" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scheme" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIZ-Dn-yqq">
+                                        <rect key="frame" x="20" y="14.999999999999998" width="62" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="35e-bA-7ai">
+                                        <rect key="frame" x="270" y="8" width="75" height="34"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="AIZ-Dn-yqq" firstAttribute="leading" secondItem="KJB-J1-6jd" secondAttribute="leading" constant="20" id="19A-Bb-vRI"/>
+                                    <constraint firstAttribute="height" constant="50" id="OCx-hv-jlf"/>
+                                    <constraint firstItem="AIZ-Dn-yqq" firstAttribute="centerY" secondItem="KJB-J1-6jd" secondAttribute="centerY" id="Rcg-aX-JUz"/>
+                                    <constraint firstItem="35e-bA-7ai" firstAttribute="centerY" secondItem="KJB-J1-6jd" secondAttribute="centerY" id="Uew-T7-T1t"/>
+                                    <constraint firstAttribute="trailing" secondItem="35e-bA-7ai" secondAttribute="trailing" constant="5" id="ft8-kW-m9l"/>
+                                    <constraint firstAttribute="width" constant="350" id="pwQ-B2-JXE"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uja-mz-kdF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Dof-in-hkG" firstAttribute="leading" secondItem="uja-mz-kdF" secondAttribute="leading" id="510-dB-hxZ"/>
+                            <constraint firstItem="KJB-J1-6jd" firstAttribute="centerX" secondItem="00Z-np-m8K" secondAttribute="centerX" id="Drt-Nh-XaU"/>
                             <constraint firstItem="jvT-wf-vf0" firstAttribute="centerX" secondItem="00Z-np-m8K" secondAttribute="centerX" id="EC4-bc-oPb"/>
                             <constraint firstItem="jvT-wf-vf0" firstAttribute="top" secondItem="uja-mz-kdF" secondAttribute="top" constant="20" id="Zj0-yI-Ufo"/>
                             <constraint firstItem="uja-mz-kdF" firstAttribute="trailing" secondItem="Dof-in-hkG" secondAttribute="trailing" id="mvz-JU-4rX"/>
-                            <constraint firstItem="Dof-in-hkG" firstAttribute="top" secondItem="jvT-wf-vf0" secondAttribute="bottom" id="z7m-yU-i9j"/>
+                            <constraint firstItem="Dof-in-hkG" firstAttribute="top" secondItem="KJB-J1-6jd" secondAttribute="bottom" constant="12" id="ooQ-kO-zHP"/>
+                            <constraint firstItem="KJB-J1-6jd" firstAttribute="top" secondItem="jvT-wf-vf0" secondAttribute="bottom" constant="10" id="y4R-ko-GMT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Schemes" id="lhm-ao-sPq">
@@ -393,6 +420,7 @@
                         <outlet property="inputColorLabel" destination="wdC-NS-97l" id="snL-uq-9td"/>
                         <outlet property="inputColorStack" destination="jvT-wf-vf0" id="wgA-oX-a1v"/>
                         <outlet property="schemeTable" destination="Dof-in-hkG" id="QeN-UZ-ll2"/>
+                        <outlet property="schemeTypeButton" destination="35e-bA-7ai" id="bij-YA-xmN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tTb-Wx-CaZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
